--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.344.0",
     "next": "^14.2.25",
     "next-auth": "^5.0.0-beta.15",
@@ -46,6 +47,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@playwright/test": "^1.58.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^14.3.1",
@@ -53,7 +55,6 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "@eslint/eslintrc": "^3.2.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.19.0",
     "eslint-config-next": "^15.1.0",
