--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-hook-form": "^7.50.1",
     "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
