--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.0.2",
@@ -43,9 +45,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "recharts": "^2.12.2",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
-    "zod": "^3.22.4",
-    "sharp": "^0.33.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
